# engraver

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  cliff.toml  clippy.toml  deny.toml  index.html  install.sh  rustfmt.toml
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: _build.yml  _test.yml  benchmark.yml  ci.yml  nightly.yml  release.yml
crates/engraver-cli/: Cargo.toml  README.md
crates/engraver-cli/src/: cli.rs  macros.rs  main.rs  progress.rs
crates/engraver-cli/src/commands/: benchmark.rs  checksum.rs  config.rs  erase.rs  list.rs  mod.rs  verify.rs  write.rs
crates/engraver-cli/tests/: cli_tests.rs  device_tests.rs
crates/engraver-core/: Cargo.toml  README.md
crates/engraver-core/benches/: checksums.rs
crates/engraver-core/fuzz/: Cargo.toml
crates/engraver-core/fuzz/fuzz_targets/: fuzz_checkpoint_json.rs  fuzz_checksum_parse.rs  fuzz_format_functions.rs  fuzz_hex_parsing.rs  fuzz_magic_bytes.rs  fuzz_settings_toml.rs  fuzz_size_parsing.rs  fuzz_source_type.rs  fuzz_write_config.rs  fuzz_write_progress.rs
crates/engraver-core/src/: benchmark.rs  config.rs  error.rs  lib.rs  partition.rs  resume.rs  settings.rs  source.rs  verifier.rs  writer.rs
crates/engraver-core/tests/: compression_integration.rs  http_integration.rs  integration_tests.rs  verify_integration.rs  write_integration.rs
crates/engraver-detect/: Cargo.toml  README.md
crates/engraver-detect/fuzz/: Cargo.toml
crates/engraver-detect/fuzz/fuzz_targets/: fuzz_csv_parser.rs  fuzz_format_bytes.rs  fuzz_mount_line.rs  fuzz_mount_parser.rs  fuzz_plist_parser.rs  fuzz_wmic_parser.rs
crates/engraver-detect/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/engraver-detect/tests/: integration_tests.rs
crates/engraver-gui/: Cargo.toml  README.md
crates/engraver-gui/src/: lib.rs
crates/engraver-platform/: Cargo.toml  README.md
crates/engraver-platform/fuzz/: Cargo.toml
crates/engraver-platform/fuzz/fuzz_targets/: fuzz_alignment.rs  fuzz_path_normalize.rs
crates/engraver-platform/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/engraver-platform/tests/: integration_tests.rs
dev/bench/: data.js
docs/: CONTRIBUTING.md  ROADMAP.md  quickstart.md
docs/architecture/: overview.md
man/: engraver-benchmark.1  engraver-checksum.1  engraver-config.1  engraver-erase.1  engraver-list.1  engraver-verify.1  engraver-write.1  engraver.1
packaging/aur/engraver-bin/: .SRCINFO  PKGBUILD
packaging/aur/engraver-git/: PKGBUILD
packaging/homebrew/: engraver-src.rb  engraver.rb
packaging/scripts/: install.sh  release.sh
