[workspace]
resolver = "2"
members = [
    "crates/engraver-core",
    "crates/engraver-cli",
    "crates/engraver-gui",
    "crates/engraver-platform",
    "crates/engraver-detect",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Engraver Contributors"]
license = "MIT"
repository = "https://github.com/mstephenholl/engraver"
homepage = "https://github.com/mstephenholl/engraver"
description = "Fast, safe CLI tool for creating bootable USB drives, SD cards, and NVMe drives from ISO images"
keywords = ["usb", "bootable", "iso", "flash", "imaging"]
categories = ["command-line-utilities", "filesystem"]
rust-version = "1.86"

[workspace.dependencies]
# Core functionality
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.18"
console = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# HTTP for remote sources
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }

# Compression
flate2 = "1"
xz2 = "0.1"
zstd = "0.13"
bzip2 = "0.6"

# Checksums/Verification
sha2 = "0.10"
md-5 = "0.10"
crc32fast = "1"

# Cross-platform
cfg-if = "1"

# Testing
mockall = "0.14"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

# Pre-commit hooks
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
