[package]
name = "engraver-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for Engraver - create bootable USB drives from ISO images"

[[bin]]
name = "engraver"
path = "src/main.rs"

[dependencies]
engraver-core = { path = "../engraver-core" }
engraver-detect = { path = "../engraver-detect" }

clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
indicatif.workspace = true
console.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
