[package]
name = "engraver-platform"
version = "0.1.0"
edition = "2021"
authors = ["Engraver Contributors"]
license = "MIT"
description = "Platform-specific raw device I/O for Engraver"
repository = "https://github.com/yourusername/engraver"
keywords = ["disk", "io", "raw", "device"]
categories = ["os", "filesystem"]

[dependencies]
thiserror = "2"
tracing = "0.1"
cfg-if = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
