[package]
name = "engraver-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.engraver-core]
path = ".."

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_format_functions"
path = "fuzz_targets/fuzz_format_functions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_write_config"
path = "fuzz_targets/fuzz_write_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_write_progress"
path = "fuzz_targets/fuzz_write_progress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_source_type"
path = "fuzz_targets/fuzz_source_type.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_magic_bytes"
path = "fuzz_targets/fuzz_magic_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_checksum_parse"
path = "fuzz_targets/fuzz_checksum_parse.rs"
test = false
doc = false
bench = false
