[package]
name = "engraver-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.engraver-core]
path = ".."

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_format_functions"
path = "fuzz_targets/fuzz_format_functions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_write_config"
path = "fuzz_targets/fuzz_write_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_write_progress"
path = "fuzz_targets/fuzz_write_progress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_source_type"
path = "fuzz_targets/fuzz_source_type.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_magic_bytes"
path = "fuzz_targets/fuzz_magic_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_checksum_parse"
path = "fuzz_targets/fuzz_checksum_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_size_parsing"
path = "fuzz_targets/fuzz_size_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_hex_parsing"
path = "fuzz_targets/fuzz_hex_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_settings_toml"
path = "fuzz_targets/fuzz_settings_toml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_checkpoint_json"
path = "fuzz_targets/fuzz_checkpoint_json.rs"
test = false
doc = false
bench = false
