[package]
name = "engraver-platform-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.engraver-platform]
path = ".."

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_alignment"
path = "fuzz_targets/fuzz_alignment.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_path_normalize"
path = "fuzz_targets/fuzz_path_normalize.rs"
test = false
doc = false
bench = false
